Better naming for clarity in the validation procedure and changed asset gen to config pkg
